fixed auth openapi + cleaned up auth a bit
