# controllers/auth.controller.js
@@ -14,10 +14,15 @@ const generateTokenAndSetCookie = require("../utils/generateToken");
 
 const { getUserByIndividualFeatures, getUserByMongoID, mongo2object } = require("../middleware/databaseHandling");
 
-//sign up function
+
+// const KEYS_TO_REMOVE = ["password", "_id"];
+// const KEYS_TO_REMOVE = ["_id", "confirmed", "clearance", "password", "profileTags", "stories", "ignoredRecommendations", "friends", "lastLocation", "notifications", "uid", "auth2FA"];
+const KEYS_TO_REMOVE = [ "_id", "confirmed", "clearance", "password", "stories", "notifications", "uid", "auth2FA" ];
+
+
+
+
 async function signup(req, res) {
-
-
     try {
          const { email, password, username } = req.body;
 
@@ -70,12 +75,12 @@ async function signup(req, res) {
 
         await newUser.save();
 
-        const trimmed_user = mongo2object(newUser, ["password", "_id"])
+        const trimmed_user = mongo2object(newUser, KEYS_TO_REMOVE)
         if (!trimmed_user.success) {
             return res.status(trimmed_user.outcome.status).json({ success: false, ...trimmed_user.outcome.result });
         }
 
-        res.status(200).json({
+        res.status(201).json({
             success: true,
             user: trimmed_user.outcome.result.user
         });
@@ -102,7 +107,7 @@ async function setup2fa(req, res) {
         user.auth2FA.enabled = true;
         await user.save();
         
-        return res.status(200).json({
+        return res.status(201).json({
             success: true,
             qrCodeUrl: secret.otpauth_url
         });
@@ -160,6 +165,10 @@ async function verifyBasicCredentials(req, res) {
     try {
         const { email, username, password } = req.body;
 
+        if (!email && !username) {
+            return res.status(400).json({ success: false, message: "Email or username is required" });
+        }
+
         if (!password) {
             return res.status(400).json({ success: false, message: "Password is required" });
         }
@@ -178,8 +187,16 @@ async function verifyBasicCredentials(req, res) {
             return res.status(403).json({ success: false, message: "Email not confirmed" });
         }
 
-        return res.status(200).json({
-            success: true
+        if (!user.auth2FA.enabled) {
+            return res.status(200).json({ 
+                success: true,
+                confirmation_required: false
+            });
+        }
+
+        return res.status(202).json({
+            success: true,
+            confirmation_required: true
         });
     } catch (error) {
         console.log("Error in login controller", error.message);
@@ -238,7 +255,7 @@ async function login(req, res) { //! FINISH
 
         generateTokenAndSetCookie(user._id, res);
 
-        const trimmed_user = mongo2object(user, ["password", "_id"]);
+        const trimmed_user = mongo2object(user, KEYS_TO_REMOVE);
         if (!trimmed_user.success) {
             return res.status(trimmed_user.outcome.status).json({ success: false, ...trimmed_user.outcome.result });
         }
@@ -304,26 +321,26 @@ const test = async (req, res) => {
     const token = req.cookies["jwt-meshlycore"];
 
     if (!token) {
-        return res.status(401).json({ authorized: "false", message: "Token missing" });
+        return res.status(401).json({ success: false, message: "Token missing" });
     }
 
     try {
-        const user = await User.findById(jwt.verify(token, ENV_VARS.JWT_SECRET).userId).select("-password -_id");
+        const user = await User.findById(jwt.verify(token, ENV_VARS.JWT_SECRET).userId);
 
         if (!user) {
             console.log("User not found even though valid token")
-            return res.status(500).json({ authorized: "false", message: "Internal server error" });
+            return res.status(500).json({ success: false, message: "Internal server error" });
         }
 
 
-        const trimmed_user = mongo2object(user)
+        const trimmed_user = mongo2object(user, KEYS_TO_REMOVE);
         if (!trimmed_user.success) {
             return res.status(trimmed_user.outcome.status).json({ success: false, ...trimmed_user.outcome.result });
         }
 
-        return res.status(200).json({ authorized: "true", user: trimmed_user.outcome.result.user });
+        return res.status(200).json({ success: true, user: trimmed_user.outcome.result.user });
     } catch (err) {
-        return res.status(401).json({ authorized: "false", message: "Invalid or expired token" });
+        return res.status(401).json({ success: false, message: "Invalid or expired token" });
     }
 };
 
